--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "expo-battery": "~8.0.1",
-    "expo-device": "~6.0.2"
+    "expo-device": "~6.0.2",
+    "expo-checkbox": "~3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
