--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.74.5",
     "expo-battery": "~8.0.1",
     "expo-device": "~6.0.2",
-    "expo-checkbox": "~3.0.0"
+    "expo-checkbox": "~3.0.0",
+    "@react-native-picker/picker": "2.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
