--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "expo-device": "~6.0.2",
     "expo-checkbox": "~3.0.0",
     "@react-native-picker/picker": "2.7.5",
-    "expo-linear-gradient": "~13.0.2"
+    "expo-linear-gradient": "~13.0.2",
+    "expo-font": "~12.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
