--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "expo-checkbox": "~3.0.0",
     "@react-native-picker/picker": "2.7.5",
     "expo-linear-gradient": "~13.0.2",
-    "expo-font": "~12.0.10"
+    "expo-font": "~12.0.10",
+    "expo-splash-screen": "~0.27.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
