--- a/app.json
+++ b/app.json
@@ -27,7 +27,13 @@
       [
         "expo-font",
         {
-          "fonts": ["./assets/fonts/ImperialScript-Regular.ttf"]
+          "fonts": ["./assets/fonts/imperial.ttf"]
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
       ]
     ]
